; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_n.c_b43_nphy_rx_iq_coeffs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_n.c_b43_nphy_rx_iq_coeffs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wldev = type { i32 }
%struct.b43_phy_n_iq_comp = type { i8*, i8*, i8*, i8* }

@B43_NPHY_C1_RXIQ_COMPA0 = common dso_local global i32 0, align 4
@B43_NPHY_C1_RXIQ_COMPB0 = common dso_local global i32 0, align 4
@B43_NPHY_C2_RXIQ_COMPA1 = common dso_local global i32 0, align 4
@B43_NPHY_C2_RXIQ_COMPB1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b43_wldev*, i32, %struct.b43_phy_n_iq_comp*)* @b43_nphy_rx_iq_coeffs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @b43_nphy_rx_iq_coeffs(%struct.b43_wldev* %0, i32 %1, %struct.b43_phy_n_iq_comp* %2) #0 {
  %4 = alloca %struct.b43_wldev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.b43_phy_n_iq_comp*, align 8
  store %struct.b43_wldev* %0, %struct.b43_wldev** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.b43_phy_n_iq_comp* %2, %struct.b43_phy_n_iq_comp** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %34

9:                                                ; preds = %3
  %10 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %11 = load i32, i32* @B43_NPHY_C1_RXIQ_COMPA0, align 4
  %12 = load %struct.b43_phy_n_iq_comp*, %struct.b43_phy_n_iq_comp** %6, align 8
  %13 = getelementptr inbounds %struct.b43_phy_n_iq_comp, %struct.b43_phy_n_iq_comp* %12, i32 0, i32 3
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @b43_phy_write(%struct.b43_wldev* %10, i32 %11, i8* %14)
  %16 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %17 = load i32, i32* @B43_NPHY_C1_RXIQ_COMPB0, align 4
  %18 = load %struct.b43_phy_n_iq_comp*, %struct.b43_phy_n_iq_comp** %6, align 8
  %19 = getelementptr inbounds %struct.b43_phy_n_iq_comp, %struct.b43_phy_n_iq_comp* %18, i32 0, i32 2
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @b43_phy_write(%struct.b43_wldev* %16, i32 %17, i8* %20)
  %22 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %23 = load i32, i32* @B43_NPHY_C2_RXIQ_COMPA1, align 4
  %24 = load %struct.b43_phy_n_iq_comp*, %struct.b43_phy_n_iq_comp** %6, align 8
  %25 = getelementptr inbounds %struct.b43_phy_n_iq_comp, %struct.b43_phy_n_iq_comp* %24, i32 0, i32 1
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @b43_phy_write(%struct.b43_wldev* %22, i32 %23, i8* %26)
  %28 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %29 = load i32, i32* @B43_NPHY_C2_RXIQ_COMPB1, align 4
  %30 = load %struct.b43_phy_n_iq_comp*, %struct.b43_phy_n_iq_comp** %6, align 8
  %31 = getelementptr inbounds %struct.b43_phy_n_iq_comp, %struct.b43_phy_n_iq_comp* %30, i32 0, i32 0
  %32 = load i8*, i8** %31, align 8
  %33 = call i32 @b43_phy_write(%struct.b43_wldev* %28, i32 %29, i8* %32)
  br label %55

34:                                               ; preds = %3
  %35 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %36 = load i32, i32* @B43_NPHY_C1_RXIQ_COMPA0, align 4
  %37 = call i8* @b43_phy_read(%struct.b43_wldev* %35, i32 %36)
  %38 = load %struct.b43_phy_n_iq_comp*, %struct.b43_phy_n_iq_comp** %6, align 8
  %39 = getelementptr inbounds %struct.b43_phy_n_iq_comp, %struct.b43_phy_n_iq_comp* %38, i32 0, i32 3
  store i8* %37, i8** %39, align 8
  %40 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %41 = load i32, i32* @B43_NPHY_C1_RXIQ_COMPB0, align 4
  %42 = call i8* @b43_phy_read(%struct.b43_wldev* %40, i32 %41)
  %43 = load %struct.b43_phy_n_iq_comp*, %struct.b43_phy_n_iq_comp** %6, align 8
  %44 = getelementptr inbounds %struct.b43_phy_n_iq_comp, %struct.b43_phy_n_iq_comp* %43, i32 0, i32 2
  store i8* %42, i8** %44, align 8
  %45 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %46 = load i32, i32* @B43_NPHY_C2_RXIQ_COMPA1, align 4
  %47 = call i8* @b43_phy_read(%struct.b43_wldev* %45, i32 %46)
  %48 = load %struct.b43_phy_n_iq_comp*, %struct.b43_phy_n_iq_comp** %6, align 8
  %49 = getelementptr inbounds %struct.b43_phy_n_iq_comp, %struct.b43_phy_n_iq_comp* %48, i32 0, i32 1
  store i8* %47, i8** %49, align 8
  %50 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %51 = load i32, i32* @B43_NPHY_C2_RXIQ_COMPB1, align 4
  %52 = call i8* @b43_phy_read(%struct.b43_wldev* %50, i32 %51)
  %53 = load %struct.b43_phy_n_iq_comp*, %struct.b43_phy_n_iq_comp** %6, align 8
  %54 = getelementptr inbounds %struct.b43_phy_n_iq_comp, %struct.b43_phy_n_iq_comp* %53, i32 0, i32 0
  store i8* %52, i8** %54, align 8
  br label %55

55:                                               ; preds = %34, %9
  ret void
}

declare dso_local i32 @b43_phy_write(%struct.b43_wldev*, i32, i8*) #1

declare dso_local i8* @b43_phy_read(%struct.b43_wldev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
